<resources>
    <string name="app_name">Airline JK</string>
    <string name="Vuelos">Vuelos</string>
    <string name="Perfil">Perfil</string>
    <string name="Reservaciones">Reservaciones</string>
    <string name="CheckIn">Check In</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="sign_in">Sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flights_offer_frag">Flights Offer Frag</string>
    <string name="vuelos_en_oferta">Vuelos en Oferta</string>
    <string name="logo">Logo</string>
    <string name="login">Log In</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresar">Ingresar</string>
    <string name="sign_in_title">Sign In</string>
    <string name="continuar">Continuar</string>
    <string name="iNombre">Nombre:</string>
    <string name="name">Name</string>
    <string name="apellido_1">Apellido 1:</string>
    <string name="locationL">Dirección:</string>
    <string name="location">Dirección</string>
    <string name="phoneL">Teléfono:</string>
    <string name="phonePattern">XXXX-XXXX</string>
    <string name="cellphoneL">Celular:</string>
    <string name="usernameL">Username:</string>
    <string name="username">Username</string>
    <string name="passwordL">Password:</string>
    <string name="confirm_passwordL">Confirm Password:</string>
    <string name="apellido_1_val">Apellido 1</string>
    <string name="apellido_2">Apellido 2:</string>
    <string name="apellido_2_val">Apellido 2</string>
    <string name="emailL">Email:</string>
    <string name="fecha_de_n">Fecha de N:</string>
    <string name="b_squeda">Búsqueda</string>
    <string name="not_available">No disponible</string>
    <string name="log_out">Log Out</string>
</resources>