<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7A7272"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2F9F9B"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="76dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="157dp"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/logo"
            android:src="@mipmap/ic_plane_foreground" />

        <TextView
            android:id="@+id/airlineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="65dp" />

        <TextView
            android:id="@+id/LoginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/login"
            android:textColor="#F8F8F8"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="78dp" />

        <EditText
            android:id="@+id/lUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <EditText
            android:id="@+id/lPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="81dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#2B289C"
                android:text="@string/registrarse" />

            <Space
                android:layout_width="23dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#2B289C"
                android:text="@string/ingresar" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
