<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2F9F9B"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2F9F9B"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="408dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/logo"
            android:src="@mipmap/ic_plane_foreground" />

        <TextView
            android:id="@+id/airlineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginLeft="145dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <TextView
            android:id="@+id/SignInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/sign_in_title"
            android:textColor="#FBFAFA"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:background="?android:attr/listDivider" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/iNombre"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/iName"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <LinearLayout
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/apellido_1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/iLastName1"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/apellido_1_val"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <LinearLayout
            android:layout_width="382dp"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/apellido_2"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/iLastName2"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/apellido_2_val"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="382dp"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/emailL"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/iEmail"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="example@email.com"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/fecha_de_n"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <DatePicker
            android:id="@+id/iDatePicker"
            android:layout_width="269dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:spinnersShown="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />


        <Button
            android:id="@+id/ctnBtn"
            android:layout_width="200dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:text="@string/continuar"
            app:backgroundTint="#2B289C" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>