<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2F9F9B"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="408dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:contentDescription="@string/logo"
            android:src="@mipmap/ic_plane_foreground" />

        <TextView
            android:id="@+id/airlineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginLeft="145dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/SignInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/sign_in_title"
            android:textColor="#FBFAFA"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="9dp"
            android:background="?android:attr/listDivider" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="14dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/locationL"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/iLocation"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/location"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/phoneL"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/iPhone"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/phonePattern"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="17dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCellphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/cellphoneL"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/iCellphone"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/phonePattern"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/usernameL"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/iUsername"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <LinearLayout
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/passwordL"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/iPassword"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <LinearLayout
            android:layout_width="382dp"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/confirm_passwordL"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Space
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/iCPassword"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/signInBtn"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:text="@string/sign_in_title"
            app:backgroundTint="#2B289C" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>